{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 109,
  "lineage": "512b193a-78b0-ae9d-a4f5-1fd07350b15e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b1487539cb57dacd",
            "association_id": "eipassoc-03b1399273b0f5991",
            "domain": "vpc",
            "id": "eipalloc-0b1487539cb57dacd",
            "instance": "i-0e4137e07f6d660b2",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c30f4d8702b628d0",
            "private_dns": "ip-10-0-57-123.us-west-2.compute.internal",
            "private_ip": "10.0.57.123",
            "public_dns": "ec2-54-203-115-199.us-west-2.compute.amazonaws.com",
            "public_ip": "54.203.115.199",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2_instance",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.my_app",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06068bc7800ac1a83",
            "arn": "arn:aws:ec2:us-west-2:637423544908:instance/i-0e4137e07f6d660b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4137e07f6d660b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c30f4d8702b628d0",
            "private_dns": "ip-10-0-57-123.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.57.123",
            "public_dns": "ec2-35-93-98-127.us-west-2.compute.amazonaws.com",
            "public_ip": "35.93.98.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a94655969fd01382",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09498e0870cb1a1bf",
            "tags": {
              "Name": "EC2-NODE-1"
            },
            "tags_all": {
              "Name": "EC2-NODE-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b8677a06d3f35cb"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_subnet.my_app",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423544908:internet-gateway/igw-0ec4b2a0de5d9b138",
            "id": "igw-0ec4b2a0de5d9b138",
            "owner_id": "637423544908",
            "tags": {
              "Name": "my_app"
            },
            "tags_all": {
              "Name": "my_app"
            },
            "vpc_id": "vpc-01bf5e5f7235d986a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423544908:route-table/rtb-00a4ba50f36e9fd7f",
            "id": "rtb-00a4ba50f36e9fd7f",
            "owner_id": "637423544908",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec4b2a0de5d9b138",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_app"
            },
            "tags_all": {
              "Name": "my_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bf5e5f7235d986a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012952e746a5d5283",
            "route_table_id": "rtb-00a4ba50f36e9fd7f",
            "subnet_id": "subnet-09498e0870cb1a1bf"
          },
          "dependencies": [
            "aws_internet_gateway.my_app",
            "aws_route_table.my_app",
            "aws_subnet.my_app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423544908:security-group/sg-02b8677a06d3f35cb",
            "description": "Allow HTTP \u0026 SSH to our web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b8677a06d3f35cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "637423544908",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bf5e5f7235d986a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423544908:subnet/subnet-09498e0870cb1a1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09498e0870cb1a1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423544908",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01bf5e5f7235d986a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:637423544908:vpc/vpc-01bf5e5f7235d986a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d24b6aa4d64dba10",
            "default_route_table_id": "rtb-0b4003d20be4be927",
            "default_security_group_id": "sg-0330d780223e046c4",
            "dhcp_options_id": "dopt-0d58893dfaffcefc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bf5e5f7235d986a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4003d20be4be927",
            "owner_id": "637423544908",
            "tags": {
              "Name": "EC2 Instance VPS"
            },
            "tags_all": {
              "Name": "EC2 Instance VPS"
            }
          }
        }
      ]
    }
  ]
}